# deltabench

./: .gitmodules  CMakeLists.txt  data_reader.h  delta_compress.cc  delta_compress.h  main.cc  odess_similarity_detection.cc  odess_similarity_detection.h
util/: coding.cc  coding.h  gear_matrix.h
